1.Updated Java Version to 20 for using Virtual Threads 2. Changed the logic for generating thumbnails